@@ -1,6 +1,8 @@
 LIST OF CHANGES
 ---------------
 
+ - Add run_tranfer_complete date to pac_bio_run_well_metrics
+
 release 6.20.1
  - Add new PacBio conf values to pac_bio_run_well_metrics
  - Add substitution metrics from C2A qc check to the iseq_product_metrics
